agregan medidas de centralidad

--- a/Network.ipynb
+++ b/Network.ipynb
@@ -552,6 +552,227 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nx.is_bipartite(B)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CbAIfWGpxFKY",
+        "outputId": "6281bf44-0c16-4ce0-f384-30190a5fd657"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bipartite.centrality.degree_centrality(B, users_uni)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0yvhMlVNunr4",
+        "outputId": "f194e434-328b-43d3-9405-4c59c3895a4f"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'2u': 0.13333333333333333,\n",
+              " '10u': 0.2,\n",
+              " '19u': 0.3333333333333333,\n",
+              " '18u': 0.3333333333333333,\n",
+              " '8u': 0.26666666666666666,\n",
+              " '6u': 0.26666666666666666,\n",
+              " '20u': 0.2,\n",
+              " '1u': 0.2,\n",
+              " '4u': 0.2,\n",
+              " '23u': 0.3333333333333333,\n",
+              " '12u': 0.26666666666666666,\n",
+              " '7u': 0.2,\n",
+              " '25u': 0.2,\n",
+              " '3u': 0.2,\n",
+              " '21u': 0.2,\n",
+              " '24u': 0.2,\n",
+              " '5u': 0.2,\n",
+              " '15u': 0.3333333333333333,\n",
+              " '14u': 0.3333333333333333,\n",
+              " '9u': 0.13333333333333333,\n",
+              " '13u': 0.4666666666666667,\n",
+              " '17u': 0.3333333333333333,\n",
+              " '22u': 0.26666666666666666,\n",
+              " '16u': 0.4,\n",
+              " '11u': 0.13333333333333333,\n",
+              " '13c': 0.16,\n",
+              " '3c': 0.16,\n",
+              " '14c': 0.2,\n",
+              " '8c': 0.12,\n",
+              " '15c': 0.16,\n",
+              " '2c': 0.12,\n",
+              " '6c': 0.36,\n",
+              " '10c': 0.12,\n",
+              " '11c': 0.16,\n",
+              " '5c': 0.44,\n",
+              " '1c': 0.84,\n",
+              " '4c': 0.2,\n",
+              " '7c': 0.2,\n",
+              " '12c': 0.12,\n",
+              " '9c': 0.44}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 70
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bipartite.clustering(B)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cozrBxwjw0KU",
+        "outputId": "43d9c380-f026-4f5a-84f7-6be745cfc54b"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'1u': 0.2084054834054834,\n",
+              " '2u': 0.24852607709750568,\n",
+              " '3u': 0.36972789115646265,\n",
+              " '4u': 0.22919501133786857,\n",
+              " '5u': 0.3210714285714287,\n",
+              " '6u': 0.23392857142857146,\n",
+              " '7u': 0.2642135642135642,\n",
+              " '8u': 0.22410714285714287,\n",
+              " '9u': 0.25719954648526083,\n",
+              " '10u': 0.32562358276644005,\n",
+              " '11u': 0.2537878787878788,\n",
+              " '12u': 0.2485449735449736,\n",
+              " '13u': 0.30993716931216925,\n",
+              " '14u': 0.33607331821617537,\n",
+              " '15u': 0.2736394557823129,\n",
+              " '16u': 0.3057823129251701,\n",
+              " '17u': 0.1917044595616024,\n",
+              " '18u': 0.241848544973545,\n",
+              " '19u': 0.3263392857142858,\n",
+              " '20u': 0.258779761904762,\n",
+              " '21u': 0.26158008658008663,\n",
+              " '22u': 0.347108843537415,\n",
+              " '23u': 0.2582671957671958,\n",
+              " '24u': 0.32108843537414977,\n",
+              " '25u': 0.32414965986394567,\n",
+              " '1c': 0.19551961496060874,\n",
+              " '2c': 0.12583250083250083,\n",
+              " '3c': 0.1603260869565217,\n",
+              " '4c': 0.20223179598179597,\n",
+              " '5c': 0.21778221778221782,\n",
+              " '6c': 0.2299760845215391,\n",
+              " '7c': 0.17579334246000913,\n",
+              " '8c': 0.15714285714285714,\n",
+              " '9c': 0.19185660493352802,\n",
+              " '10c': 0.16936758893280635,\n",
+              " '11c': 0.2168154761904762,\n",
+              " '12c': 0.16217532467532467,\n",
+              " '13c': 0.13597860472860474,\n",
+              " '14c': 0.13212374045707379,\n",
+              " '15c': 0.17663690476190474}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bipartite.closeness_centrality(B, users_uni)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "muf7oU90y5Mx",
+        "outputId": "cf6bc57d-c930-4cad-f7de-ef9e31f6f5a2"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'2u': 0.6631578947368421,\n",
+              " '10u': 0.6774193548387096,\n",
+              " '19u': 0.7590361445783133,\n",
+              " '18u': 0.7590361445783133,\n",
+              " '8u': 0.5779816513761468,\n",
+              " '6u': 0.7411764705882353,\n",
+              " '20u': 0.7241379310344828,\n",
+              " '1u': 0.6923076923076923,\n",
+              " '4u': 0.6774193548387096,\n",
+              " '23u': 0.7590361445783133,\n",
+              " '12u': 0.7411764705882353,\n",
+              " '7u': 0.5478260869565217,\n",
+              " '25u': 0.6774193548387096,\n",
+              " '3u': 0.6774193548387096,\n",
+              " '21u': 0.6923076923076923,\n",
+              " '24u': 0.6774193548387096,\n",
+              " '5u': 0.6631578947368421,\n",
+              " '15u': 0.7078651685393258,\n",
+              " '14u': 0.7078651685393258,\n",
+              " '9u': 0.6631578947368421,\n",
+              " '13u': 0.7974683544303798,\n",
+              " '17u': 0.7078651685393258,\n",
+              " '22u': 0.6923076923076923,\n",
+              " '16u': 0.7241379310344828,\n",
+              " '11u': 0.5384615384615384,\n",
+              " '13c': 0.4953271028037383,\n",
+              " '3c': 0.4774774774774775,\n",
+              " '14c': 0.5145631067961165,\n",
+              " '8c': 0.44537815126050423,\n",
+              " '15c': 0.4953271028037383,\n",
+              " '2c': 0.48623853211009177,\n",
+              " '6c': 0.5824175824175825,\n",
+              " '10c': 0.4690265486725664,\n",
+              " '11c': 0.4953271028037383,\n",
+              " '5c': 0.6091954022988506,\n",
+              " '1c': 0.8688524590163934,\n",
+              " '4c': 0.5047619047619047,\n",
+              " '7c': 0.5145631067961165,\n",
+              " '12c': 0.48623853211009177,\n",
+              " '9c': 0.6385542168674698}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 71
+        }
+      ]
     }
   ]
 }
